# ETSIDIlib

./: CMakeLists.txt  ETSIDIlib.docx  README.md  manual.md
example/: CMakeLists.txt  example.cpp  glut.h
lib/: ETSIDI.exp  ETSIDI.h  ETSIDI.lib
src/: Dice.cpp  Dice.h  ETSIDI.cpp  ETSIDI.h  EasyPlayer.cpp  EasyPlayer.h  Errors.cpp  Errors.h  FontCache.cpp  FontCache.h  Sprite.cpp  SpriteSequence.cpp  SpriteSequence.h  TextureCache.cpp  TextureCache.h  picoPNG.cpp
src/oglft/: OGLFT.cpp  OGLFT.h  ft2build.h
src/oglft/freetype/: freetype.h  ftadvanc.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftcid.h  ftfntfmt.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  ftttdrv.h  fttypes.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h  tttags.h  ttunpat.h
src/oglft/freetype/config/: ftconfig.h  ftheader.h  ftoption.h
src/oglft/freetype/internal/: autohint.h  ftcalc.h  ftdebug.h  ftdriver.h  ftgloadr.h  ftmemory.h  ftobjs.h  ftrfork.h  ftstream.h  ftvalid.h  psaux.h  pshints.h  sfnt.h  t1types.h  tttypes.h
