MESSAGE(STATUS "EXAMPLE: Creando un ejemplo")


ADD_EXECUTABLE(example example.cpp)


TARGET_INCLUDE_DIRECTORIES(example PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
TARGET_LINK_LIBRARIES(example ${CMAKE_CURRENT_SOURCE_DIR}/../lib/ETSIDI.lib)
TARGET_LINK_LIBRARIES(example  ${CMAKE_CURRENT_SOURCE_DIR}/glut32.lib)

