project(example)
MESSAGE(STATUS "EXAMPLE: Creando un ejemplo")


ADD_EXECUTABLE(example example.cpp)


INCLUDE_DIRECTORIES(example  ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
TARGET_LINK_LIBRARIES(example ${CMAKE_CURRENT_SOURCE_DIR}/../lib/ETSIDI.lib)
target_link_directories(example PUBLIC ${PROJECT_SOURCE_DIR})
message("Example prj: ${PROJECT_SOURCE_DIR}")
if(CMAKE_SIZEOF_VOID_P EQUAL 4)
  TARGET_LINK_LIBRARIES(example  PUBLIC {CMAKE_CURRENT_SOURCE_DIR}/glut32.lib)

endif()
    add_custom_command(TARGET example POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../lib/fmodL.dll  ${CMAKE_CURRENT_BINARY_DIR}
        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/../lib/ETSIDI.dll  ${CMAKE_CURRENT_BINARY_DIR}
    )
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sonidos/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/sonidos/)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/imagenes/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/imagenes/)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/fuentes/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/fuentes/)
if(CMAKE_SIZEOF_VOID_P EQUAL 4)
  add_custom_command(TARGET example POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/glut.dll  ${CMAKE_CURRENT_BINARY_DIR}
    )
else()
  add_custom_command(TARGET example POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/freeglut.dll  ${CMAKE_CURRENT_BINARY_DIR}
    )
endif()